[workspace]
resolver = "2"
members = [
    "crates/temporal-cortex-toon",
    "crates/temporal-cortex-toon-cli",
    "crates/temporal-cortex-toon-wasm",
    "crates/temporal-cortex-toon-python",
    "crates/truth-engine",
    "crates/truth-engine-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/billylui/temporal-cortex-core"
rust-version = "1.88"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Calendar rules
rrule = "0.14"

# WASM
wasm-bindgen = "0.2"

# Python
pyo3 = { version = "0.23", features = ["auto-initialize"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
proptest = "1"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
