[package]
name = "temporal-cortex-toon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI tool for TOON (Token-Oriented Object Notation) encoding/decoding"
readme = "README.md"
keywords = ["toon", "json", "llm", "cli", "compression"]
categories = ["command-line-utilities", "encoding"]

[[bin]]
name = "toon"
path = "src/main.rs"

[dependencies]
toon-core = { path = "../temporal-cortex-toon", version = "0.3.1", package = "temporal-cortex-toon" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
