[package]
name = "temporal-cortex-toon-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Python bindings for TOON format encoder/decoder and truth-engine"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
toon-core = { path = "../temporal-cortex-toon", package = "temporal-cortex-toon" }
truth-engine = { path = "../truth-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
