[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "temporal-cortex-toon"
version = "0.3.0"
description = "TOON encoder/decoder and Truth Engine (temporal resolution, timezone conversion, RRULE expansion, availability merging) for AI calendar agents"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Billy Lui" },
]
keywords = ["toon", "json", "llm", "calendar", "rrule", "icalendar", "timezone", "datetime"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Scheduling",
]

[project.urls]
Homepage = "https://github.com/temporal-cortex/core"
Repository = "https://github.com/temporal-cortex/core"
"Bug Tracker" = "https://github.com/temporal-cortex/core/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "temporal_cortex_toon._native"
