[package]
name = "toon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI tool for TOON (Token-Oriented Object Notation) encoding/decoding"

[[bin]]
name = "toon"
path = "src/main.rs"

[dependencies]
toon-core = { path = "../toon-core" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
