[package]
name = "toon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "TOON (Token-Oriented Object Notation) encoder/decoder — compact JSON for LLMs"
keywords = ["toon", "json", "llm", "compression", "serialization"]
categories = ["encoding", "parser-implementations"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "compression"
harness = false
